<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">

    <Button
        android:id="@+id/dlg_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/dlg_close"
        android:gravity="center"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dlg_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/bind_dlg_title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dlg_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:lineSpacingExtra="15dp"
            android:text="@string/bind_dlg_content"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/dlg_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="#48D0BB"
            android:padding="10dp"
            android:text="@string/dlg_bind"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>