<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000ff"
    xmlns:attr="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_statusbar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#fe231e1a">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_hei"
            android:background="#fe231e1a"
            android:clickable="true"
            android:layout_below="@+id/rl_statusbar"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/read_back"/>
            <ImageView
                android:id="@+id/book_mark"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/add_bookmark"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#fe231e1a"
            android:orientation="vertical"
            android:clickable="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                >
                <TextView
                    android:id="@+id/pre_chapter"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:text="@string/read_menu_pre_chapter"
                    />
                <TextView
                    android:id="@+id/next_chapter"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:text="@string/read_menu_next_chapter"
                    />
                <SeekBar
                    android:id="@+id/read_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/next_chapter"
                    android:layout_toRightOf="@id/pre_chapter"
                    android:max="100"
                    android:progress="50"
                    android:maxHeight="2dp"
                    android:minHeight="2dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:progressDrawable="@drawable/layer_progress"
                    android:thumb="@drawable/shape_circle" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <com.yueyou.adreader.view.ToolBar android:id="@+id/chapter" attr:img="@drawable/chapter" attr:title="@string/read_menu_chapter" style="@style/style_default_tool_bar" />
                <com.yueyou.adreader.view.ToolBar android:id="@+id/brightness" attr:img="@drawable/brightness" attr:title="@string/read_menu_brightn" style="@style/style_default_tool_bar" />
                <com.yueyou.adreader.view.ToolBar android:id="@+id/night" attr:img="@drawable/day" attr:title="@string/read_menu_style_night" style="@style/style_default_tool_bar" />
                <com.yueyou.adreader.view.ToolBar android:id="@+id/option" attr:img="@drawable/option" attr:title="@string/read_menu_option" style="@style/style_default_tool_bar" />
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/navigation_bar_height"
                android:layout_width="match_parent"
                android:layout_height="20dp"></RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <include
        android:id="@+id/option_menu"
        layout="@layout/read_menu_option"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
    <include
        android:id="@+id/brightness_menu"
        layout="@layout/read_menu_brightness"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</RelativeLayout>