<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    xmlns:attr="http://schemas.android.com/apk/res-auto">
    <com.yueyou.adreader.view.TopBar android:id="@+id/top_bar" android:layout_width="fill_parent" android:layout_height="@dimen/top_bar_hei" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="15sp"
                android:textColor="#acacac"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"/>
            <ImageView
                android:layout_above="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/logo_300"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp">
            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_copyright"
                android:textSize="14sp"
                android:textColor="#606060"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/my_info_divid_line"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_mail"
                android:textSize="14sp"
                android:textColor="#606060"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/my_info_divid_line"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_qq"
                android:textSize="14sp"
                android:textColor="#606060"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/my_info_divid_line"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>