<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fe231e1a"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/font_size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/read_menu_option_font"
                android:textColor="#ffffff"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/font_size_title"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/font_size_dec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_flip"
                    android:gravity="center"
                    android:paddingVertical="2dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:background="@drawable/font_dec" />
                </LinearLayout>

                <TextView
                    android:id="@+id/font_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="16"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/font_size_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_flip"
                    android:gravity="center"
                    android:paddingVertical="2dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:background="@drawable/font_add" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/line_space_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/read_menu_option_line_small"
                android:textColor="#ffffff"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/line_space_title"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/line_space_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_flip"
                    android:gravity="center"
                    android:paddingVertical="2dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:background="@drawable/space_small" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_space_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_flip_selected"
                    android:gravity="center"
                    android:paddingVertical="2dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:background="@drawable/space_normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_space_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_flip"
                    android:gravity="center"
                    android:paddingVertical="2dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:background="@drawable/space_large" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:text="@string/read_menu_option_style"
                android:textColor="#ffffff"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <com.yueyou.adreader.view.ReaderPage.Skin
                    android:id="@+id/skin1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    attr:bar_bg="#ffbbdec1"
                    attr:bg="#ffceead3"
                    attr:text="#ff344d36" />

                <com.yueyou.adreader.view.ReaderPage.Skin
                    android:id="@+id/skin2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    attr:bar_bg="#ffbea58a"
                    attr:bg="#ffd3c2a4"
                    attr:text="#544a41" />

                <com.yueyou.adreader.view.ReaderPage.Skin
                    android:id="@+id/skin3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    attr:bar_bg="#ffeeeeee"
                    attr:bg="#fff5f5f5"
                    attr:text="#ff333333" />

                <com.yueyou.adreader.view.ReaderPage.Skin
                    android:id="@+id/skin4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    attr:bar_bg="#fff2cbd7"
                    attr:bg="#fff4e1e7"
                    attr:text="#ff8e2d4a" />

                <com.yueyou.adreader.view.ReaderPage.Skin
                    android:id="@+id/skin5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    attr:bar_bg="#ff494441"
                    attr:bg="#ff393431"
                    attr:text="#ff999491" />

                <com.yueyou.adreader.view.ReaderPage.Skin
                    android:id="@+id/skin_night"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    attr:bar_bg="#ff26262e"
                    attr:bg="#ff0c0c0e"
                    attr:text="#ff555557" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/read_menu_option_flip_type"
                android:textColor="#ffffff"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/flip_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_flip_selected"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/read_menu_option_flip_overlay"
                    android:textColor="@color/flip_mode_selected_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/flip_null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/shape_flip"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/read_menu_option_flip_nil"
                    android:textColor="@color/flip_mode_text_color"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp" />
    </LinearLayout>
</RelativeLayout>